first draft lhc chapter

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -735,3 +735,378 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       reportNumber   = "FERMILAB-PUB-99-358-T, EFI-99-50, NSF-ITP-99-149",
       SLACcitation   = "%%CITATION = HEP-PH/9912343;%%",
 }
+
+@article{BSM_extraD_Carena:2006bn,
+      author         = "Carena, Marcela S. and Ponton, Eduardo and Santiago, Jose
+                        and Wagner, Carlos E.M.",
+      title          = "{Light Kaluza Klein States in Randall-Sundrum Models with
+                        Custodial SU(2)}",
+      journal        = "Nucl.Phys.",
+      volume         = "B759",
+      pages          = "202-227",
+      doi            = "10.1016/j.nuclphysb.2006.10.012",
+      year           = "2006",
+      eprint         = "hep-ph/0607106",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "ANL-HEP-PR-06-53, CU-TP-1152, EFI-06-08,
+                        FERMILAB-PUB-06-234-T",
+      SLACcitation   = "%%CITATION = HEP-PH/0607106;%%",
+}
+
+@article{BSM_composite_Higgs_Contino:2006qr,
+      author         = "Contino, Roberto and Da Rold, Leandro and Pomarol, Alex",
+      title          = "{Light custodians in natural composite Higgs models}",
+      journal        = "Phys.Rev.",
+      volume         = "D75",
+      pages          = "055014",
+      doi            = "10.1103/PhysRevD.75.055014",
+      year           = "2007",
+      eprint         = "hep-ph/0612048",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "UAB-FT-619, ROMA1-1445-2006",
+      SLACcitation   = "%%CITATION = HEP-PH/0612048;%%",
+}
+
+@article{BSM_topColor_Hill:1991at,
+      author         = "Hill, Christopher T.",
+      title          = "{Topcolor: Top quark condensation in a gauge extension of
+                        the standard model}",
+      journal        = "Phys.Lett.",
+      volume         = "B266",
+      pages          = "419-424",
+      doi            = "10.1016/0370-2693(91)91061-Y",
+      year           = "1991",
+      reportNumber   = "FERMILAB-PUB-91-105-T",
+      SLACcitation   = "%%CITATION = PHLTA,B266,419;%%",
+}
+
+@article{lhc:machine_description,
+      author         = "Evans, Lyndon and Bryant, Philip",
+      editor         = "Evans, Lyndon",
+      title          = "{LHC Machine}",
+      journal        = "JINST",
+      volume         = "3",
+      pages          = "S08001",
+      doi            = "10.1088/1748-0221/3/08/S08001",
+      year           = "2008",
+      SLACcitation   = "%%CITATION = JINST,3,S08001;%%",
+}
+
+@misc{LHC:Aerial_View,
+      title          = "LHC Aerial View",
+      note           = "URL~\url{http://www.coepp.org.au/files/coepp/images/cern-aerial2.jpg}",
+}
+
+@book{LHC:TDR_Vol1_MainRing_Brüning,
+      author        = "Brüning, Oliver Sim and Collier, Paul and Lebrun, P and
+                       Myers, Stephen and Ostojic, Ranko and Poole, John and
+                       Proudlock, Paul",
+      title         = "{LHC Design Report Vol1 - The Main Ring}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      year          = "2004",
+}
+
+@book{LHC:TDR_Vol2_InfrastructureServices_Brüning,
+      author        = "Brüning, Oliver Sim and Collier, Paul and Lebrun, P and
+                       Myers, Stephen and Ostojic, Ranko and Poole, John and
+                       Proudlock, Paul",
+      title         = "{LHC Design Report Vol2 - Infrastructure and General Services}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      year          = "2004",
+}
+
+@book{LHC:TDR_Vol3_InjectionChain_Benedikt,
+      author        = "Benedikt, Michael and Collier, Paul and Mertens, V and
+                       Poole, John and Schindl, Karlheinz",
+      title         = "{LHC Design Report Vol3 - The Injection Chain}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      year          = "2004",
+}
+
+@article{LHC:LHIC_linac2_lhcTests_Hill,
+      author         = "Hill, C.E. and Lombardi, A. and Scrivens, R. and
+                        Vretenar, M. and Feschenko, A. and others",
+      title          = "{Tests of the CERN proton linac performance for LHC -
+                        type beams}",
+      journal        = "eConf",
+      volume         = "C000821",
+      pages          = "TUD17",
+      year           = "2000",
+      eprint         = "physics/0008102",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.acc-ph",
+      reportNumber   = "LINAC2000-TUD17",
+      SLACcitation   = "%%CITATION = PHYSICS/0008102;%%",
+}
+
+@misc{LHC:LHC_linac2_duoplasmatron_schematic,
+      title        = "CERN Linac2 Duoplasmatron Schematic",
+      note         = "URL~\url{http://linac2.home.cern.ch/linac2/sources/source.htm}",
+}
+
+@misc{LHC:LHC_linac2_duoplasmatron_image,
+      title        = "CERN Linac2 Duoplasmatron Image",
+      note         = "URL~\url{http://linac2.web.cern.ch/linac2/CF002521-ProtonSourceDuoplasmatronRichardChristianss.jpg}",
+}
+
+@misc{LHC:LHC_linac2_rfq_schematic,
+      title        = "RFQ Schematic",
+      note         = "URL~\url{http://www.lnl.infn.it/images/acc_fig14.jpg}",
+}
+
+@misc{LHC:LHC_linac2_rfq_image,
+      title        = "Example RFQ Image",
+      note         = "URL~\url{http://www.toyama-en.com/accelerator/images/rfq_downstream_webLarge.jpg}",
+}
+
+@misc{LHC:LHC_linac2_alvarezChambersInside_image,
+      title        = "Inside an Alvarez Tube",
+      note         = "URL~\url{https://cds.cern.ch/record/1281668/files/DTL_proto_assembled_image.jpg?subformat=icon}",
+}
+
+@misc{LHC:LHC_linac2_alvarezChambers_image,
+      title        = "CERN Linac2 Alvarez Tubes",
+      note         = "URL~\url{http://www.toyama-en.com/accelerator/images/rfq_downstream_webLarge.jpg}",
+}
+
+@techreport{LHC:BasicsOfAccelerators_Baird,
+      author        = "Baird, S",
+      title         = "{Accelerators for pedestrians; rev. version}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "AB-Note-2007-014. CERN-AB-Note-2007-014.
+                       PS-OP-Note-95-17-Rev-2. CERN-PS-OP-Note-95-17-Rev-2",
+      month         = "Feb",
+      year          = "2007",
+}
+
+@article{LHC:LHC_psbooster_boosterTurns40,
+      author        = "Klaus Hanke,and Michel Chanel, Karlheinz Schindl" 
+      journal       = "CERN Courier"
+      title         = "{The PS Booster hits 40}",
+      month         = "Sep",
+      year          = "2012",
+}
+
+@misc{LHC:LHC_psbooster_layout,
+      title        = "Image, CERN PSbooster Layout",
+      note         = "URL~\url{http://psb-machine.web.cern.ch/psb-machine/}",
+}
+
+@misc{LHC:LHC_psbooster_injection_image,
+      title        = "Image, CERN PSbooster injection from Linac2",
+      note         = "URL~\url{http://www.lhc-facts.ch/img/psb/psb_injektion.jpg}",
+}
+
+@misc{LHC:LHC_psbooster_4stacks_image,
+      title        = "Image, CERN PSbooster is 4 verticaly stacked synchotrons",
+      note         = "URL~\url{http://www.lhc-facts.ch/img/psb/psb.jpg}",
+}
+
+@misc{LHC:LHC_psbooster_layout_image,
+      title        = "Image, CERN PSbooster Layout",
+      note         = "URL~\url{http://psb-machine.web.cern.ch/psb-machine/layout.gif}",
+}
+
+@misc{LHC:LHC_psbooster_section10_layout_image,
+      title        = "Image, CERN PSbooster Section 10 Layout",
+      note         = "URL~\url{http://psb-machine.web.cern.ch/psb-machine/sectors/sect10.gif}",
+}
+
+@misc{LHC:LHC_psbooster_CO2_RF_Cavity_image,
+      title        = "Image, CERN PSbooster CO2 RF Cavity",
+      note         = "URL~\url{http://cern-accelerators-optics.web.cern.ch/cern-accelerators-optics/PS_BOOSTER/Pictures/P10L1.JPG}",
+}
+
+@misc{LHC:LHC_psbooster_2batchScheme_image,
+      title        = "Image, CERN PSbooster 2 batch filling scheme of the PS",
+      note         = "URL~\url{http://ps-div.web.cern.ch/ps-div/LHC-PS/schindlrf.gif}",
+}
+
+@misc{LHC:LHC_ps_layout_image,
+      title        = "Image, CERN PS Layout",
+      note         = "URL~\url{http://psring.web.cern.ch/psring/psring/pscomplex.gif}",
+}
+
+@misc{LHC:LHC_ps_dipoles_image,
+      title        = "Image, CERN PS Dipoles",
+      note         = "URL~\url{http://home.web.cern.ch/sites/home.web.cern.ch/files/styles/medium/public/image/accelerator/2013/01/accelerators-ps.jpg?itok=5E3Tp4Q0}",
+}
+
+@techreport{LHC:RF_Systems_of_CERN_Valuch,
+      author        = "Valuch, D",
+      title         = "{Radio frequency systems of the CERN synchrotron accelerators}",
+      institution   = "CERN",
+      address       = "Geneva",
+      note          = "URL~\url{http://dvaluch.web.cern.ch/dvaluch/seminar/radio$\%$20frequency$\%$20systems$\%$20of$\%$20the$\%$20cern$\%$20accelerators.pdf}",
+}
+
+@article{LHC:LHC_SPS_200MHzRF_Dôme,
+      author        = "Dôme, Georges",
+      title         = "{The SPS acceleration system travelling wave drift-tube
+                       structure for the CERN SPS}",
+      number        = "CERN-SPS-ARF-77-11",
+      pages         = "26 p",
+      month         = "May",
+      year          = "1977",
+}
+
+@misc{LHC:LHC_sps_cern_website,
+      title        = "CERN Website, Super Proton Synchrotron",
+      note         = "URL~\url{http://home.web.cern.ch/about/accelerators/super-proton-synchrotron}",
+}
+
+@misc{LHC:LHC_sps_beamline_image,
+      title        = "Image, CERN SPS Beamline",
+      note         = "URL~\url{http://home.web.cern.ch/sites/home.web.cern.ch/files/styles/medium/public/image/accelerator/2013/01/sps.jpg?itok=iLnNGjdI}",
+}
+
+@misc{LHC:LHC_sps_rf_outside_image,
+      title        = "Image, CERN SPS 200 MHz RF Cavity",
+      note         = "URL~\url{https://cds.cern.ch/record/969086/files/7505156X.jpg?subformat=icon-1440}",
+}
+
+@misc{LHC:LHC_sps_rf_inside_image,
+      title        = "Image, CERN SPS, Inside 200 MHz RF Cavity",
+      note         = "URL~\url{http://rsta.royalsocietypublishing.org/content/roypta/370/1973/3887/F24.large.jpg?width=800&height=600&carousel=1}",
+}
+
+@misc{LHC:LHC_sps_layout_image,
+      title        = "Image, CERN SPS, Layout",
+      note         = "URL~\url{https://espace.cern.ch/be-dep/OP/sps/pictures/sps2.PNG}",
+}
+
+@misc{LHC:LHC_outreach_listOfAllMagnets,
+      title        = "CERN, List of All LHC Magnets",
+      note         = "URL~\url{http://lhc-machine-outreach.web.cern.ch/lhc-machine-outreach/components/magnets/types_of_magnets.htm}",
+}
+
+@article{LHC:LHC_septums_Barnes,
+      author         = "Barnes, M.J. and Borburgh, J. and Goddard, B. and
+                        Hourican, M.",
+      title          = "{Injection and extraction magnets: septa}",
+      year           = "2011",
+      eprint         = "1103.1062",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.acc-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1103.1062;%%",
+}
+
+@article{LHC:LHC_kickers_Barnes,
+      author         = "Barnes, M.J. and Ducimetiere, L. and Fowler, T. and
+                        Senaj, V. and Sermeus, L.",
+      title          = "{Injection and extraction magnets: Kicker magnets}",
+      year           = "2011",
+      eprint         = "1103.1583",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.acc-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1103.1583;%%",
+}
+
+@article{LHC:LHC_lhc_dipole_Beauquis,
+      author         = "Beauquis, J.",
+      title          = "{LHC Dipole Geometry Parameters, Comparisons between
+                        Producers}",
+      journal        = "eConf",
+      volume         = "C04100411",
+      pages          = "046",
+      year           = "2004",
+      reportNumber   = "IWAA-2004-046",
+      SLACcitation   = "%%CITATION = ECONF,C04100411,046;%%",
+}
+
+@misc{LHC:LHC_lhc_dipole_image,
+      title        = "Image, CERN LHC, Dipole Magnet, Staging Area",
+      note         = "URL~\url{https://cds.cern.ch/record/994212/files/transp-2001-001_05.jpg?subformat=icon-1440}",
+}
+
+@misc{LHC:LHC_lhc_quadrupole_schematic_image,
+      title        = "Image, CERN LHC, Quadrupole Magnet, Cross Section Schematic",
+      note         = "URL~\url{https://cds.cern.ch/record/841485}",
+}
+
+@misc{LHC:LHC_lhc_quadrupole_staged_image,
+      title        = "Image, CERN LHC, Quadrupole Magnet, Staging Area",
+      note         = "URL~\url{http://www.triumf.ca/sites/default/files/images/twinquadrupolemagnets.preview.jpg}",
+}
+
+@misc{LHC:LHC_lhc_quadrupole_focusing_schematic_image,
+      title        = "Image, CERN LHC, Quadrupole Magnet, Focusing Schematic",
+      note         = "URL~\url{http://www.lhc-closer.es/img/subidas/4_6_3_3.png}",
+}
+
+@misc{LHC:LHC_lhc_multipole_focusing_schematic_image,
+      title        = "Image, CERN LHC, Multipole Magnet, Focusing Schematic",
+      note         = "URL~\url{http://www.lhc-closer.es/img/subidas/Multipoles.jpg}",
+}
+
+@misc{LHC:LHC_lhc_magnetic_cell_schematic_image,
+      title        = "Image, CERN LHC, Magnetic Cell Layout",
+      note         = "URL~\url{http://www.lhc-closer.es/img/subidas/4_6_3_4.png}",
+}
+
+@misc{LHC:LHC_lhc_IR_schematic_image,
+      title        = "Image, CERN LHC, Interaction Region Schematic",
+      note         = "URL~\url{http://www.lhc-closer.es/img/subidas/4_6_3_6.jpg}",
+}
+
+@misc{Jean-Luc:841461,
+      author        = "Jean-Luc Caron",
+      title         = "{Superconducting cavity with its cryostat. Cavité
+                       supraconductrice dans son cryostat.}",
+      month         = "May",
+      year          = "1994",
+      note          = "AC Collection. Legacy of AC. Pictures from 1992 to 2002.",
+}
+
+@misc{LHC:LHC_lhc_rfcav_installed_image,
+      title        = "Image, CERN LHC, Superconducting RF Cavities, Installed",
+      note         = "URL~\url{http://home.web.cern.ch/sites/home.web.cern.ch/files/image/engineering_page/2013/01/rf-cavity.jpg}",
+}
+
+@misc{LHC:LHC_lhc_rfcav_staged_image,
+      title        = "Image, CERN LHC, Superconducting RF Cavities, Staged",
+      note         = "URL~\url{http://www.lhc-closer.es/img/subidas/4_7_2_2.jpg}",
+}
+
+@misc{LHC:LHC_lhc_cryogen_cernWebsite,
+      title        = "Outreach, CERN LHC, Cryogenic System",
+      note         = "URL~\url{http://home.web.cern.ch/about/engineering/cryogenics-low-temperatures-high-performance}",
+}
+
+@article{LHC:LHC_cool_challenge,
+      title         = "{The challenge of keeping cool}",
+      month         = "Sep",
+      year          = "2013",
+}
+
+@techreport{LHC:LHC_cryogenicHe_system_Lebrun,
+      author        = "Lebrun, P",
+      title         = "{Large Cryogenic Helium Refrigeration System for the LHC}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "LHC-Project-Report-629. CERN-LHC-Project-Report-629",
+      month         = "Feb",
+      year          = "2003",
+      note          = "revised version number 1 submitted on 2003-02-19 11:44:11",
+}
+
+@misc{LHC:LHC_lhc_cryogen_islands_layout_image,
+      title        = "Image, CERN LHC, Layout of the 5 cryogenic islands",
+      note         = "URL~\url{http://d29qn7q9z0j1p6.cloudfront.net/content/roypta/370/1973/3887/F12.medium.gif}",
+}
+
+@misc{LHC:LHC_lhc_vacuum_cernWebsite,
+      title        = "Outreach, CERN LHC, Vacuum System",
+      note         = "URL~\url{http://home.web.cern.ch/about/engineering/vacuum-empty-interplanetary-space}",
+}
+
+@misc{LHC:LHC_lhc_beamScreen_image,
+      title        = "Image, CERN LHC, Beam Screen",
+      note         = "URL~\url{http://home.web.cern.ch/sites/home.web.cern.ch/files/image/engineering_page/2013/01/beam-screen_0.jpg}",
+}
