first draft lhc chapter

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -42,6 +42,6 @@
 
 \bibliographystyle{lucas_unsrt}
 \bibliography{dissertation}
-\printglossary[type=\acronymtype,title=List of Acryonyms,toctitle=List of Acronyms]
+\printglossary[type=\acronymtype,title=List of Acronyms,toctitle=List of Acronyms]
 
 \end{document}
