updated cms chapter

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -5,6 +5,8 @@
 \newacronym{lhc}{LHC}{Large Hadron Collider}
 \newacronym{atlas}{ATLAS}{A Toroidal LHC Apparatus}
 \newacronym{cms}{CMS}{Compact Muon Solenoid}
+\newacronym{ecal}{ECAL}{Electromagnetic Calorimeter}
+\newacronym{hcal}{HCAL}{Hadronic Calorimeter}
 
 \newacronym{qft}{QFT}{Quantum Field Theory}
 \newacronym{qed}{QED}{Quantum Electrodynamics}
