updated cms chapter

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1110,3 +1110,15 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       title        = "Image, CERN LHC, Beam Screen",
       note         = "URL~\url{http://home.web.cern.ch/sites/home.web.cern.ch/files/image/engineering_page/2013/01/beam-screen_0.jpg}",
 }
+
+@article{CMS:CMS_Machine_Chatrchyan:2008aa,
+      author         = "Chatrchyan, S. and others",
+      title          = "{The CMS experiment at the CERN LHC}",
+      collaboration  = "CMS",
+      journal        = "JINST",
+      volume         = "3",
+      pages          = "S08004",
+      doi            = "10.1088/1748-0221/3/08/S08004",
+      year           = "2008",
+      SLACcitation   = "%%CITATION = JINST,3,S08004;%%",
+}
