updated cms chapter

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -10,6 +10,7 @@
 \usepackage{definitions}
 \usepackage[nomain,acronym,toc,nopostdot,nonumberlist]{glossaries}
 \usepackage[pdftex,pdftitle={Dissertation},pdfauthor={John Garland Wood}]{hyperref}
+\usepackage{chngpage} 
 
 \author{John Garland Wood}
 
